apps/app_transfer.c
@@ -51,7 +51,7 @@
 		</syntax>
 		<description>
 			<para>Requests the remote caller be transferred
-			to a given destination. If TECH (SIP, IAX2, LOCAL etc) is used, only
+			to a given destination. If TECH (SIP, IAX2, etc) is used, only
 			an incoming call with the same channel technology will be transferred.
 			Note that for SIP, if you transfer before call is setup, a 302 redirect
 			SIP message will be returned to the caller.</para>
